# MPIPCL

./: .Doxyfile  .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  fast
Spack package/: package.py
cmake/: mpipcl-config.cmake.in
docs/html/: annotated.html  classes.html  dir_5deee76091b5576246ab348a3cf62aea.html  dir_5e24e54fa7fe97212931272b80bc26ed.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_82c729a439e24f64ae96df0bd35f54cb.html  dir_9fd43cbf431ad4345d64cbab9841c2b6.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ea91a2a72b7cbbf988d2bd2cd1d23e49.html  files.html  functions.html  functions_vars.html  graph_legend.html  index.html  md_README.html  mpipcl_8h_source.html  pages.html  struct__MPIP__Request-members.html  struct__MPIP__Request.html  struct__MPIP__Request__coll__graph.map  struct__MPIP__Request__coll__graph.md5  struct__meta__-members.html  struct__meta__.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
docs/latex/: annotated.tex  index.tex  md_README.tex  refman.tex  struct__MPIP__Request.tex  struct__MPIP__Request__coll__graph.md5  struct__meta__.tex
examples/: CMakeLists.txt
examples/Basic/: CMakeLists.txt  ctest1.c  mpipcltest1.c  mpipcltest2.c  mpipcltest3.c  mpipcltest4.c  mpipcltest5.c  mpipcltest6.c  mpipcltest7.c  mpipcltest8.c  mpipcltest9.cpp  test1  test_examples.sh
examples/EuroMPI/Send Type Comparison/: exampi2020a.c  exampi2020b.c  exampi2020c.c  exampi2020d.c  exampi2020f.c  slurm.sh
include/: CMakeLists.txt  mpipcl.h
results/EuroMPI/: send.csv  send.xlsx
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt  MPIP_Parrived.c  MPIP_Pready.c  MPIP_Pready_list.c  MPIP_Pready_range.c  MPIP_Precv_init.c  MPIP_Psend_init.c  MPIP_Request_free.c  MPIP_Start.c  MPIP_Startall.c  MPIP_Test.c  MPIP_Testall.c  MPIP_Testany.c  MPIP_Testsome.c  MPIP_Wait.c  MPIP_Waitall.c  MPIP_Waitany.c  MPIP_Waitsome.c  mpipcl.c  mpipcl.cpp
src/core/: CMakeLists.txt
src/core/include/: CMakeLists.txt  MPIP_Request.h  debug.h  mpipcl_request.hpp
src/core/pt2pt/: send.c  setup.c  sync.c
src/pt2pt/: CMakeLists.txt  mpipcl.c  notes on fixes to MPIPCL.txt  send.c  setup.c  sync.c
tests/source/: CMakeLists.txt  mpipcltest1.c  mpipcltest4.c  mpipcltest7.c  mpipcltest9.cpp
